<resources>
    <string name="app_name">Jastip.in</string>
    <string name="title_activity_navigation">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_post">New Post</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="jastip_in">JASTIP.IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="login">LOGIN</string>
    <string name="email_address_cap">EMAIL ADDRESS</string>
    <string name="username_cap">USERNAME</string>
    <string name="password_cap">PASSWORD</string>
    <string name="confirm_password_cap">CONFIRM PASSWORD</string>
    <string name="email_address">Email Address</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="or_sign_in_">Or Sign In With</string>
    <string name="nama">Nama</string>
    <string name="aktivitas">Aktivitas</string>
    <string name="jastip_pay">JastipPay</string>
    <string name="cari_negara">Cari Berdasarkan Negara</string>
    <string name="cari_traveller">Cari Berdasarkan Traveller</string>
    <string name="trending_request">Trending Request</string>
    <string name="cari">Cari</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="jepang">Jepang</string>
    <string name="korea">Korea</string>
    <string name="thailand">Thailand</string>
    <string name="singapura">Singapura</string>
    <string name="indonesia">Indonesia</string>
    <string name="action_settings">Settings</string>
    <string name="sam">Sam</string>
    <string name="andrew">Andrew</string>
    <string name="josh">Josh</string>
    <string name="jadwal_travel">Jadwal Travel</string>
    <string name="request_barang">Request Barang</string>
    <string name="jual_barang">Jual Barang</string>
    <string name="titip_traveler">Titip Ke Traveller</string>
    <string name="post">Post</string>
    <string name="title_activity_request">RequestActivity</string>
    <string name="david_nelson">David Nelson</string>
    <string name="malang">Malang</string>
    <string name="bali">Bali</string>
    <string name="asal">Asal</string>
    <string name="tujuan">Tujuan Travelling</string>
    <string name="kirim_pesan_pribadi">Kirim Pesan Pribadi</string>
    <string name="upload_gambar">Upload Gambar</string>
    <string name="detail">Detail</string>
    <string name="pie_susu">Pie Susu Dhian</string>
    <string name="deskripsi_produk">Deskripsi Produk</string>
    <string name="varian_original">Varian Original</string>
    <string name="tujuan_pengiriman">Tujuan Pengiriman</string>
    <string name="alamat_pengiriman">Alamat Pengiriman</string>
    <string name="kota_kabupaten">Kota/Kabupaten</string>
    <string name="malang_jawatimur">Malang, Jawa Timur</string>
    <string name="kota_malang">Kota Malang</string>
    <string name="titip">Titip</string>
    <string name="detail_barang">Detail Barang</string>
    <string name="detail_negara">Detail Negara</string>
    <string name="detail_harga">Detail Harga</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string-array name="spinner">
        <item>Makanan</item>
        <item>Minuman</item>
        <item>Pakaian</item>
        <item>Pernak-pernik</item>
        <item>Lain-lain</item>
    </string-array>
</resources>