<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".activity.TitipTravellerActivity"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/titpTravellerLayout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:background="@color/orange">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="25dp">

                <TextView
                    android:layout_width="250dp"
                    android:layout_height="match_parent"
                    android:text="@string/titip_traveler"
                    android:textAppearance="@style/title"
                    android:gravity="center_vertical">
                </TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right">

                    <ImageButton
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/ic_chat"
                        android:layout_gravity="center" />

                    <ImageButton
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="25dp"
                        android:background="@drawable/ic_cart"
                        android:layout_gravity="center" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/david_nelson"
                android:textAppearance="@style/nama"
                android:gravity="center"/>

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile1"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/default_profile"
                android:layout_marginTop="15dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text ="@string/asal"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/grey"
                        android:textAlignment="center"/>
                    <TextView
                        android:id="@+id/txt_asal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text ="@string/malang"
                        android:textAppearance="@style/asal_tujuan"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="10dp"
                        android:backgroundTint="@color/orange"
                        android:textAlignment="center"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text ="@string/tujuan"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/grey"
                        android:textAlignment="center"/>
                    <TextView
                        android:id="@+id/txt_tujuan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text ="@string/bali"
                        android:textAppearance="@style/asal_tujuan"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="10dp"
                        android:backgroundTint="@color/orange"
                        android:textAlignment="center"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            app:cardCornerRadius="5dp"
            android:padding="5dp"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Tanggal Kembali"
                    android:textColor="@color/grey"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1 April 2021"
                    android:layout_marginLeft="20dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/button_kirimpesan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/kirim_pesan_pribadi"
            app:cornerRadius="100dp"/>
        
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/jastip_pay"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/upload_gambar"
            android:textAppearance="@style/nama"
            android:layout_marginLeft="40dp"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/ic_add_photo"
            android:backgroundTint="@color/grey"
            android:layout_marginLeft="40dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginTop="15dp"
            android:text="@string/detail"
            android:textAppearance="@style/detail"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginTop="10dp"
            android:text="@string/nama"
            android:textAppearance="@style/detail"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/pie_susu"
                android:textAppearance="@style/detail_nama"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center_vertical"/>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="50dp"
            android:background="@drawable/ic_add_minus"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginTop="15dp"
            android:text="@string/deskripsi_produk"
            android:textAppearance="@style/detail"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="5dp"
            app:cardCornerRadius="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/varian_original"
                android:textAppearance="@style/detail_nama"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center_vertical"/>

        </androidx.cardview.widget.CardView>

        <Spinner
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/grey"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginTop="15dp"
            android:text="@string/tujuan_pengiriman"
            android:textAppearance="@style/detail"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginTop="10dp"
            android:text="@string/alamat_pengiriman"
            android:textAppearance="@style/detail"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            app:cardCornerRadius="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/malang_jawatimur"
                android:textAppearance="@style/detail_nama"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"/>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="50dp"
            android:background="@drawable/ic_add_minus"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginTop="15dp"
            android:text="@string/kota_kabupaten"
            android:textAppearance="@style/detail"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="5dp"
            app:cardCornerRadius="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/kota_malang"
                android:textAppearance="@style/detail_nama"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center_vertical"/>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/button_titip"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="60dp"
            android:text="@string/titip"
            app:cornerRadius="100dp"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>